syntax = "proto3";
option csharp_namespace = "Protobuf.Chat";

package chat;
import "Share/Protos/Shared/Status.proto";
import "Share/Protos/Chat/UserInfo.proto";
service ChatMessageService{
  rpc PostMessage(ChatMessagePostInfo)returns(stream ChatMessage);
}

//会话最小单位 一次发言
message ChatMessage{
  string message_guid = 1;
  int64  timestamp = 2;
  Talker talker = 3;
  string message = 4;
}

message ChatMessagePostInfo{
  //Message的唯一id，流输出中的每一个流项具有相同的Guid，以此来识别不同的流，避免沾包
  //不同的AsyncEnumerable<T>对象本身是不同的流，这个字段可以不要
  string session_guid = 1;
  ChatMessage message = 2;
  chat.AuthToken auth_token = 3;
}

//发言人
enum Talker{
  Agent = 0;//AI
  User = 1;//用户
}
